namespace-prod-yelb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: "prod-yelb"
    labels:
        name: "prod-yelb"
